--- a/index.html
+++ b/index.html
@@ -9,73 +9,73 @@
   </head>
   <body>
     <section class="memory-game">
-      <div class="memory-card">
+      <div class="memory-card" data-framework="clover">
         <img class="front-face" src="images/clover.png"
         alt="clover"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="clover"">
         <img class="front-face" src="images/clover.png"
         alt="clover"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="cloud">
         <img class="front-face" src="images/cloud.png"
         alt="cloud"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="cloud">
         <img class="front-face" src="images/cloud.png"
         alt="cloud"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="club">
         <img class="front-face" src="images/club.png"
         alt="club"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="club">
         <img class="front-face" src="images/club.png"
         alt="club"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="diamond">
         <img class="front-face" src="images/diamond.png"
         alt="diamond"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="diamond">
         <img class="front-face" src="images/diamond.png"
         alt="diamond"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="heart">
         <img class="front-face" src="images/heart.png"
         alt="heart"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="heart">
         <img class="front-face" src="images/heart.png"
         alt="heart"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="spades">
         <img class="front-face" src="images/spades.png"
         alt="spades"/>
         <img class="back-face" src="images/JS.png"
         alt="JavaScript"/>
       </div>
-      <div class="memory-card">
+      <div class="memory-card" data-framework="spades">
         <img class="front-face" src="images/spades.png"
         alt="spades"/>
         <img class="back-face" src="images/JS.png"
